@@ -1,5 +1,14 @@
 2009-06-03  Eric Botcazou  <ebotcazou@adacore.com>
 
+	* gcc-interface/decl.c (gnat_to_gnu_entity) <E_Record_Type>: Add the
+	_Parent field, if any, to the record before adding the other fields.
+	<E_Record_Subtype>: Put the _Controller field before the other fields
+	except for the _Tag or _Parent fields.
+	(components_to_record): Likewise.  Retrieve the _Parent field from the
+	record type.
+
+2009-06-03  Eric Botcazou  <ebotcazou@adacore.com>
+
 	* gcc-interface/decl.c (substitution_list): Rename to build_subst_list,
 	remove unused parameter and simplify.
 	(gnat_to_gnu_entity) <E_Record_Type>: Do not set TYPE_FIELDS.  Factor
